--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@ body {
 }
 @keyframes headerFadeIn { to { opacity: 1; } }
 
-/* 禁用 Dimension transform 壓扁 logo */
+/* 禁用 transform 壓扁 logo */
 .logo-wrapper, 
 .logo-circle, 
 .diamond-shape {
   transform: none !important;
 }
-
-/* 圓形鑽石 */
 .logo-wrapper {
   display: flex;
   justify-content: center;
@@ -158,8 +156,65 @@ nav ul.t-nav li a:hover {
   margin-bottom: 20px;
 }
 
-/* 聯絡我們表單 — Dimension 官網排版 */
-width: 100%;
+/* 聯絡表單排版 */
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-top: 10px;
+}
+.contact-form .form-row {
+  display: flex;
+  gap: 15px;
+}
+.contact-form input,
+.contact-form textarea {
+  flex: 1;
+  padding: 10px;
+  border-radius: 6px;
+  border: 2px solid #fff;
+  background: transparent;
+  color: #fff;
+  font-size: 16px;
+}
+.contact-form textarea {
+  resize: none;
+}
+.contact-form .button-group {
+  display: flex;
+  gap: 10px;
+}
+.contact-form button {
+  flex: 1;
+  padding: 10px 0;
+  font-weight: 700;
+  border-radius: 6px;
+  border: 2px solid #fff;
+  cursor: pointer;
+}
+.contact-form button#submitBtn {
+  background: #fff;
+  color: #000;
+}
+.contact-form button#resetBtn {
+  background: #000;
+  color: #fff;
+}
+
+/* 關閉按鈕 */
+.close-btn {
+  margin-top: 20px;
+  padding: 10px 25px;
+  font-size: 16px;
+  border-radius: 10px;
+  border: 2px solid rgba(255,255,255,0.5);
+  background: rgba(255,255,255,0.15);
+  color: #fff;
+  cursor: pointer;
+}
+.close-btn:hover {
+  background: rgba(255,255,255,0.3);
+}
 
 /* 背景霧化遮罩 */
 #overlay {
@@ -187,14 +242,12 @@ width: 100%;
 
 <body>
 <header id="header">
-  <!-- 圓形鑽石 logo -->
   <div class="logo-wrapper">
     <div class="logo-circle">
         <div class="diamond-shape"></div>
     </div>
   </div>
 
-  <!-- 標題 -->
   <div class="content">
     <div class="inner">
       <h1>佳咊實業有限公司</h1>
@@ -202,7 +255,6 @@ width: 100%;
     </div>
   </div>
 
-  <!-- T 型導覽列 -->
   <nav>
     <ul class="t-nav">
       <li><a href="#" onclick="openModal('intro')">關於佳咊</a></li>
@@ -213,10 +265,8 @@ width: 100%;
   </nav>
 </header>
 
-<!-- 背景霧化遮罩 -->
 <div id="overlay"></div>
 
-<!-- 玻璃彈窗 -->
 <div class="modal" id="modalBox">
   <div class="modal-header" id="modalTitle">標題</div>
   <div class="modal-content" id="modalContent">內容文字</div>
@@ -225,31 +275,18 @@ width: 100%;
 </div>
 
 <script>
-/* 彈窗內容 */
 const modalData = {
-  intro: {
-    title: '關於佳咊',
-    content: '佳咊實業成立於1990年，專注於色粉、顏料與色彩應用開發。我們致力於提供穩定品質、創新配方與客製化服務。'
-  },
-  work: {
-    title: '服務內容',
-    content: '・塑膠色粉調色  ・Pantone 色號比對  ・客製化顏色研發  ・技術諮詢與色彩管理'
-  },
-  about: {
-    title: '產品介紹',
-    content: '我們提供： PE色母、PP色母、透明色粉、金屬色粉、特殊效果顏料（珠光、螢光、金蔥）'
-  },
-  contact: {
-    title: '聯絡我們',
-    content: ''
-  }
+  intro: { title: '關於佳咊', content: '佳咊實業成立於1990年，專注於色粉、顏料與色彩應用開發。我們致力於提供穩定品質、創新配方與客製化服務。' },
+  work: { title: '服務內容', content: '・塑膠色粉調色  ・Pantone 色號比對  ・客製化顏色研發  ・技術諮詢與色彩管理' },
+  about: { title: '產品介紹', content: '我們提供： PE色母、PP色母、透明色粉、金屬色粉、特殊效果顏料（珠光、螢光、金蔥）' },
+  contact: { title: '聯絡我們', content: '' }
 };
 
-/* 打開彈窗 */
 function openModal(key) {
   const modal = document.getElementById('modalBox');
   const overlay = document.getElementById('overlay');
   const formContainer = document.getElementById('contactFormContainer');
+  const nav = document.querySelector('nav');
 
   document.getElementById('modalTitle').innerHTML = modalData[key].title;
   document.getElementById('modalContent').innerHTML = modalData[key].content;
@@ -257,8 +294,10 @@ function openModal(key) {
   if(key === 'contact'){
     formContainer.innerHTML = `
       <form class="contact-form">
-        <input type="text" placeholder="姓名" required />
-        <input type="email" placeholder="Email" required />
+        <div class="form-row">
+          <input type="text" placeholder="姓名" required />
+          <input type="email" placeholder="信箱" required />
+        </div>
         <textarea placeholder="訊息" rows="4" required></textarea>
         <div class="button-group">
           <button type="submit" id="submitBtn">傳送</button>
@@ -266,24 +305,24 @@ function openModal(key) {
         </div>
       </form>
     `;
-  } else {
-    formContainer.innerHTML = '';
-  }
+  } else { formContainer.innerHTML = ''; }
+
+  // 隱藏導覽列
+  if(nav) nav.style.display = 'none';
 
   overlay.style.display = 'block';
   modal.style.display = 'block';
-
   requestAnimationFrame(() => {
     overlay.classList.add('show');
     modal.classList.add('show');
   });
 }
 
-/* 關閉彈窗 */
 function closeModal() {
   const modal = document.getElementById('modalBox');
   const overlay = document.getElementById('overlay');
   const formContainer = document.getElementById('contactFormContainer');
+  const nav = document.querySelector('nav');
 
   modal.classList.remove('show');
   overlay.classList.remove('show');
@@ -292,6 +331,7 @@ function closeModal() {
     modal.style.display = 'none';
     overlay.style.display = 'none';
     formContainer.innerHTML = '';
+    if(nav) nav.style.display = 'flex';
   }, 300);
 }
 
