--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <style>
 /* 全站背景 */
 body {
-  background: url("https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/neom-SUIMrEKVOXc-unsplash.jpg") no-repeat center center fixed;
-  background-size: cover;
   margin: 0;
   font-family: 'Arial', sans-serif;
+  background: url("https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/neom-SUIMrEKVOXc-unsplash.jpg") no-repeat center center fixed;
+  background-size: cover;
   opacity: 0;
   animation: fadeIn 1.5s forwards;
 }
@@ -31,10 +31,8 @@ body {
   animation: headerFadeIn 1.5s 0.5s forwards;
 }
 
-/* 禁用 Dimension transform 壓扁 logo */
-.logo-wrapper, .logo-circle, .diamond-shape {
-  transform: none !important;
-}
+/* 禁用 transform */
+.logo-wrapper, .logo-circle, .diamond-shape { transform: none !important; }
 
 /* 圓形鑽石 */
 .logo-wrapper {
@@ -45,18 +43,14 @@ body {
   animation: logoFadeIn 1s 0.7s forwards;
 }
 .logo-circle {
-  width: 120px;
-  height: 120px;
+  width: 120px; height: 120px;
   border-radius: 50%;
   background: rgba(0,0,0,0.3);
   border: 2px solid #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex; justify-content: center; align-items: center;
 }
 .diamond-shape {
-  width: 50px;
-  height: 50px;
+  width: 50px; height: 50px;
   border: 3px solid #fff;
   background: transparent;
   transform: rotate(45deg) !important;
@@ -69,35 +63,19 @@ header .content .inner {
   opacity: 0;
   animation: titleFadeIn 1s 1s forwards;
 }
-header .content .inner h1 {
-  color: #fff;
-  font-size: 48px;
-  margin: 0;
-}
-header .content .inner p {
-  color: #fff;
-  font-size: 24px;
-  margin-top: 10px;
-}
+header .content .inner h1 { color: #fff; font-size: 48px; margin: 0; }
+header .content .inner p { color: #fff; font-size: 24px; margin-top: 10px; }
 
 /* T 字導覽列 */
 nav {
-  width: 60%;
-  margin: 0 auto;
-  opacity: 0;
-  animation: navFadeIn 1s 1.2s forwards;
+  width: 60%; margin: 0 auto;
+  opacity: 0; animation: navFadeIn 1s 1.2s forwards;
 }
 nav ul.t-nav {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  display: flex; justify-content: space-between;
+  list-style: none; padding: 0; margin: 0;
 }
-nav ul.t-nav li {
-  flex: 1;
-  text-align: center;
-}
+nav ul.t-nav li { flex: 1; text-align: center; }
 nav ul.t-nav li a {
   color: #fff !important;
   text-decoration: none;
@@ -107,17 +85,13 @@ nav ul.t-nav li a {
   display: block;
   transition: 0.3s;
 }
-nav ul.t-nav li a:hover {
-  text-shadow: 0 0 5px rgba(255,255,255,0.7);
-}
+nav ul.t-nav li a:hover { text-shadow: 0 0 5px rgba(255,255,255,0.7); }
 
 /* 玻璃彈窗 */
 .modal {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 60%;
-  max-width: 700px;
+  top: 50%; left: 50%;
+  width: 60%; max-width: 700px;
   transform: translate(-50%, -50%) scale(0.9);
   background: rgba(0,0,0,0.8);
   backdrop-filter: blur(12px);
@@ -129,11 +103,7 @@ nav ul.t-nav li a:hover {
   transition: opacity 0.3s ease, transform 0.3s ease;
   display: none;
 }
-.modal.show {
-  display: block;
-  opacity: 1;
-  transform: translate(-50%, -50%) scale(1);
-}
+.modal.show { display: block; opacity: 1; transform: translate(-50%, -50%) scale(1); }
 
 /* 彈窗標題 */
 .modal-header {
@@ -147,95 +117,53 @@ nav ul.t-nav li a:hover {
 }
 
 /* 彈窗內容 */
-.modal-content {
-  font-size: 18px;
-  color: #fff;
-  line-height: 1.6;
-  text-align: left;
-  margin-bottom: 20px;
-}
+.modal-content { font-size: 18px; color: #fff; line-height: 1.6; text-align: left; margin-bottom: 20px; }
 
-/* 聯絡表單 — Dimension 官網排版 */
+/* 聯絡表單 */
 .contact-form {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-top: 15px;
-  width: 100%;
+  display: flex; flex-direction: column; gap: 15px; margin-top: 15px; width: 100%;
 }
-.contact-form .row {
-  display: flex;
-  gap: 15px;
-}
-.contact-form input,
-.contact-form textarea {
-  padding: 10px;
-  border-radius: 6px;
+.contact-form .row { display: flex; gap: 15px; }
+.contact-form input, .contact-form textarea {
+  padding: 10px; border-radius: 6px;
   border: 2px solid #fff;
   font-size: 16px;
   color: #fff;
   background: transparent;
   flex: 1;
 }
-.contact-form textarea {
-  width: 100%;
-}
+.contact-form textarea { width: 100%; }
 .contact-form .button-group {
-  display: flex;
-  gap: 15px;
-  justify-content: flex-start;
-  margin-top: 15px;
-  width: 60%; /* 與 nav 對齊 */
+  display: flex; gap: 15px; justify-content: flex-start; margin-top: 15px; width: 60%; /* 與 T 導航對齊 */
 }
 .contact-form .button-group button {
-  flex: 1;
-  padding: 12px 0;
-  font-weight: 700;
-  border: 2px solid #fff;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: 0.3s;
+  flex: 1; padding: 12px 0; font-weight: 700;
+  border: 2px solid #fff; border-radius: 6px; cursor: pointer; transition: 0.3s;
 }
-#submitBtn {
-  background: rgba(255,255,240,0.85); /* 米白色半透明 */
-  color: #222; /* 深灰 */
-}
-#resetBtn {
-  background: #222;
-  color: #fff;
-}
+#submitBtn { background: rgba(255,255,240,0.85); color: #222; }
+#resetBtn { background: #222; color: #fff; }
 
 /* 關閉按鈕 */
 .close-btn {
-  margin-top: 20px;
-  padding: 10px 25px;
+  margin-top: 20px; padding: 10px 25px;
   font-size: 16px;
   border-radius: 10px;
   border: 2px solid rgba(255,255,255,0.5);
   background: rgba(255,255,255,0.15);
-  color: #fff;
-  cursor: pointer;
+  color: #fff; cursor: pointer;
 }
-.close-btn:hover {
-  background: rgba(255,255,255,0.3);
-}
+.close-btn:hover { background: rgba(255,255,255,0.3); }
 
 /* 背景霧化遮罩 */
 #overlay {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.3);
-  backdrop-filter: blur(5px);
+  position: fixed; top:0; left:0; width:100%; height:100%;
+  background: rgba(0,0,0,0.3); backdrop-filter: blur(5px);
   z-index: 998;
   opacity: 0;
   transition: opacity 0.3s ease;
   display: none;
 }
-#overlay.show {
-  display: block;
-  opacity: 1;
-}
+#overlay.show { display: block; opacity: 1; }
 
 /* Animations */
 @keyframes logoFadeIn { to { opacity: 1; } }
@@ -246,14 +174,10 @@ nav ul.t-nav li a:hover {
 
 <body>
 <header id="header">
-  <!-- 圓形鑽石 logo -->
   <div class="logo-wrapper">
-    <div class="logo-circle">
-        <div class="diamond-shape"></div>
-    </div>
+    <div class="logo-circle"><div class="diamond-shape"></div></div>
   </div>
 
-  <!-- 標題 -->
   <div class="content">
     <div class="inner">
       <h1>佳咊實業有限公司</h1>
@@ -261,7 +185,6 @@ nav ul.t-nav li a:hover {
     </div>
   </div>
 
-  <!-- T 型導覽列 -->
   <nav id="topNav">
     <ul class="t-nav">
       <li><a href="#" onclick="openModal('intro')">關於佳咊</a></li>
@@ -272,10 +195,8 @@ nav ul.t-nav li a:hover {
   </nav>
 </header>
 
-<!-- 背景霧化遮罩 -->
 <div id="overlay"></div>
 
-<!-- 玻璃彈窗 -->
 <div class="modal" id="modalBox">
   <div class="modal-header" id="modalTitle">標題</div>
   <div class="modal-content" id="modalContent">內容文字</div>
@@ -318,13 +239,10 @@ function openModal(key) {
     formContainer.innerHTML = '';
   }
 
-  nav.style.display = 'none';  // T 字導覽消失
+  nav.style.visibility = 'hidden'; // 彈窗出現時 T 字導覽消失
   overlay.style.display = 'block';
   modal.style.display = 'block';
-  requestAnimationFrame(() => {
-    overlay.classList.add('show');
-    modal.classList.add('show');
-  });
+  requestAnimationFrame(() => { overlay.classList.add('show'); modal.classList.add('show'); });
 }
 
 function closeModal() {
@@ -339,13 +257,12 @@ function closeModal() {
   setTimeout(() => {
     modal.style.display = 'none';
     overlay.style.display = 'none';
-    nav.style.display = 'block';  // 彈窗關閉 T 字導覽恢復
+    nav.style.visibility = 'visible'; // 彈窗關閉後恢復 T 字導覽
     formContainer.innerHTML = '';
   }, 300);
 }
 
 document.getElementById('overlay').onclick = closeModal;
 </script>
-
 </body>
 </html>
