--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@ body {
   opacity: 0;
   animation: headerFadeIn 1.5s 0.5s forwards;
 }
+@keyframes headerFadeIn { to { opacity: 1; } }
 
 /* 禁用 Dimension transform 壓扁 logo */
-.logo-wrapper, .logo-circle, .diamond-shape {
+.logo-wrapper, 
+.logo-circle, 
+.diamond-shape {
   transform: none !important;
 }
 
@@ -86,6 +89,7 @@ nav {
   margin: 0 auto;
   opacity: 0;
   animation: navFadeIn 1s 1.2s forwards;
+  display: flex;
 }
 nav ul.t-nav {
   display: flex;
@@ -121,7 +125,7 @@ nav ul.t-nav li a:hover {
   transform: translate(-50%, -50%) scale(0.9);
   background: rgba(0,0,0,0.8);
   backdrop-filter: blur(12px);
-  padding: 40px;
+  padding: 30px;
   border-radius: 16px;
   text-align: center;
   z-index: 9999;
@@ -155,15 +159,14 @@ nav ul.t-nav li a:hover {
   margin-bottom: 20px;
 }
 
-/* 聯絡表單 — Dimension 官網排版 */
+/* 聯絡我們表單 — Dimension 官網排版 */
 .contact-form {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  margin-top: 15px;
   width: 100%;
 }
-.contact-form .row {
+.contact-form .form-row {
   display: flex;
   gap: 15px;
 }
@@ -173,8 +176,8 @@ nav ul.t-nav li a:hover {
   border-radius: 6px;
   border: 2px solid #fff;
   font-size: 16px;
-  color: #fff;
   background: transparent;
+  color: #fff;
   flex: 1;
 }
 .contact-form textarea {
@@ -184,25 +187,24 @@ nav ul.t-nav li a:hover {
   display: flex;
   gap: 15px;
   justify-content: flex-start;
-  margin-top: 15px;
-  width: 60%; /* 與 nav 對齊 */
 }
 .contact-form .button-group button {
   flex: 1;
-  padding: 12px 0;
+  max-width: 45%;
+  min-width: 100px;
+  padding: 10px;
+  border-radius: 6px;
   font-weight: 700;
   border: 2px solid #fff;
-  border-radius: 6px;
   cursor: pointer;
-  transition: 0.3s;
 }
-#submitBtn {
-  background: rgba(255,255,240,0.85); /* 米白色半透明 */
-  color: #222; /* 深灰 */
+.contact-form button#submitBtn {
+  background: #fff;
+  color: #000 !important;
 }
-#resetBtn {
-  background: #222;
-  color: #fff;
+.contact-form button#resetBtn {
+  background: #000;
+  color: #fff !important;
 }
 
 /* 關閉按鈕 */
@@ -246,14 +248,12 @@ nav ul.t-nav li a:hover {
 
 <body>
 <header id="header">
-  <!-- 圓形鑽石 logo -->
   <div class="logo-wrapper">
     <div class="logo-circle">
         <div class="diamond-shape"></div>
     </div>
   </div>
 
-  <!-- 標題 -->
   <div class="content">
     <div class="inner">
       <h1>佳咊實業有限公司</h1>
@@ -261,8 +261,7 @@ nav ul.t-nav li a:hover {
     </div>
   </div>
 
-  <!-- T 型導覽列 -->
-  <nav id="topNav">
+  <nav>
     <ul class="t-nav">
       <li><a href="#" onclick="openModal('intro')">關於佳咊</a></li>
       <li><a href="#" onclick="openModal('work')">服務內容</a></li>
@@ -272,10 +271,8 @@ nav ul.t-nav li a:hover {
   </nav>
 </header>
 
-<!-- 背景霧化遮罩 -->
 <div id="overlay"></div>
 
-<!-- 玻璃彈窗 -->
 <div class="modal" id="modalBox">
   <div class="modal-header" id="modalTitle">標題</div>
   <div class="modal-content" id="modalContent">內容文字</div>
@@ -285,17 +282,29 @@ nav ul.t-nav li a:hover {
 
 <script>
 const modalData = {
-  intro: { title: '關於佳咊', content: '佳咊實業成立於1990年，專注於色粉、顏料與色彩應用開發。我們致力於提供穩定品質、創新配方與客製化服務。' },
-  work: { title: '服務內容', content: '・塑膠色粉調色  ・Pantone 色號比對  ・客製化顏色研發  ・技術諮詢與色彩管理' },
-  about: { title: '產品介紹', content: '我們提供： PE色母、PP色母、透明色粉、金屬色粉、特殊效果顏料（珠光、螢光、金蔥）' },
-  contact: { title: '聯絡我們', content: '' }
+  intro: {
+    title: '關於佳咊',
+    content: '佳咊實業成立於1990年，專注於色粉、顏料與色彩應用開發。我們致力於提供穩定品質、創新配方與客製化服務。'
+  },
+  work: {
+    title: '服務內容',
+    content: '・塑膠色粉調色  ・Pantone 色號比對  ・客製化顏色研發  ・技術諮詢與色彩管理'
+  },
+  about: {
+    title: '產品介紹',
+    content: '我們提供： PE色母、PP色母、透明色粉、金屬色粉、特殊效果顏料（珠光、螢光、金蔥）'
+  },
+  contact: {
+    title: '聯絡我們',
+    content: ''
+  }
 };
 
-function openModal(key) {
+function openModal(key){
   const modal = document.getElementById('modalBox');
   const overlay = document.getElementById('overlay');
-  const nav = document.getElementById('topNav');
   const formContainer = document.getElementById('contactFormContainer');
+  const nav = document.querySelector('nav');
 
   document.getElementById('modalTitle').innerHTML = modalData[key].title;
   document.getElementById('modalContent').innerHTML = modalData[key].content;
@@ -303,9 +312,9 @@ function openModal(key) {
   if(key === 'contact'){
     formContainer.innerHTML = `
       <form class="contact-form">
-        <div class="row">
+        <div class="form-row">
           <input type="text" placeholder="姓名" required />
-          <input type="email" placeholder="Email" required />
+          <input type="email" placeholder="信箱" required />
         </div>
         <textarea placeholder="訊息" rows="4" required></textarea>
         <div class="button-group">
@@ -314,33 +323,31 @@ function openModal(key) {
         </div>
       </form>
     `;
-  } else {
-    formContainer.innerHTML = '';
-  }
+  } else { formContainer.innerHTML = ''; }
 
-  nav.style.display = 'none';  // T 字導覽消失
+  if(nav) nav.style.visibility = 'hidden';
   overlay.style.display = 'block';
   modal.style.display = 'block';
-  requestAnimationFrame(() => {
+  requestAnimationFrame(()=>{
     overlay.classList.add('show');
     modal.classList.add('show');
   });
 }
 
-function closeModal() {
+function closeModal(){
   const modal = document.getElementById('modalBox');
   const overlay = document.getElementById('overlay');
-  const nav = document.getElementById('topNav');
   const formContainer = document.getElementById('contactFormContainer');
+  const nav = document.querySelector('nav');
 
   modal.classList.remove('show');
   overlay.classList.remove('show');
 
-  setTimeout(() => {
+  setTimeout(()=>{
     modal.style.display = 'none';
     overlay.style.display = 'none';
-    nav.style.display = 'block';  // 彈窗關閉 T 字導覽恢復
     formContainer.innerHTML = '';
+    if(nav) nav.style.visibility = 'visible';
   }, 300);
 }
 
