--- a/index.html
+++ b/index.html
@@ -32,19 +32,55 @@ body {
 }
 
 /* 禁用 Dimension transform 壓扁 logo */
-.logo-wrapper, .logo-circle, .diamond-shape {
+.logo-wrapper, 
+.logo-circle, 
+.diamond-shape {
   transform: none !important;
 }
 
 /* 圓形鑽石 */
-.logo-wrapper { display: flex; justify-content: center; margin-bottom: 0; opacity: 0; animation: logoFadeIn 1s 0.7s forwards; }
-.logo-circle { width: 120px; height: 120px; border-radius: 50%; background: rgba(0,0,0,0.3); border: 2px solid #fff; display: flex; justify-content: center; align-items: center; }
-.diamond-shape { width: 50px; height: 50px; border: 3px solid #fff; background: transparent; transform: rotate(45deg) !important; }
+.logo-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 0;
+  opacity: 0;
+  animation: logoFadeIn 1s 0.7s forwards;
+}
+.logo-circle {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: rgba(0,0,0,0.3);
+  border: 2px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.diamond-shape {
+  width: 50px;
+  height: 50px;
+  border: 3px solid #fff;
+  background: transparent;
+  transform: rotate(45deg) !important;
+}
 
 /* 標題 */
-header .content .inner { text-align: center; margin: 20px 0; opacity: 0; animation: titleFadeIn 1s 1s forwards; }
-header .content .inner h1 { color: #fff; font-size: 48px; margin: 0; }
-header .content .inner p { color: #fff; font-size: 24px; margin-top: 10px; }
+header .content .inner {
+  text-align: center;
+  margin: 20px 0;
+  opacity: 0;
+  animation: titleFadeIn 1s 1s forwards;
+}
+header .content .inner h1 {
+  color: #fff;
+  font-size: 48px;
+  margin: 0;
+}
+header .content .inner p {
+  color: #fff;
+  font-size: 24px;
+  margin-top: 10px;
+}
 
 /* T 字導覽列 */
 nav {
@@ -74,7 +110,39 @@ nav ul.t-nav li a {
   display: block;
   transition: 0.3s;
 }
-nav ul.t-nav li a:hover { text-shadow: 0 0 5px rgba(255,255,255,0.7); }
+nav ul.t-nav li a:hover {
+  text-shadow: 0 0 5px rgba(255,255,255,0.7);
+}
+
+/* 下排四欄功能列，與 T 字導覽對齊 */
+.align-container {
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+}
+.bottom-buttons {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.bottom-buttons button {
+  flex: 1;
+  margin: 0 5px;
+  padding: 12px 0;
+  border: 2px solid #fff;
+  border-radius: 6px;
+  background: rgba(255,255,240,0.85);
+  color: #222;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.bottom-buttons button.reset {
+  background: #222;
+  color: #fff;
+}
 
 /* 玻璃彈窗 */
 .modal {
@@ -94,18 +162,45 @@ nav ul.t-nav li a:hover { text-shadow: 0 0 5px rgba(255,255,255,0.7); }
   transition: opacity 0.3s ease, transform 0.3s ease;
   display: none;
 }
-.modal.show { display: block; opacity: 1; transform: translate(-50%, -50%) scale(1); }
+.modal.show {
+  display: block;
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+}
 
 /* 彈窗標題 */
-.modal-header { font-size: 28px; color: #fff; text-align: left; font-weight: 700; padding-bottom: 10px; border-bottom: 2px solid rgba(255,255,255,0.25); margin-bottom: 20px; }
+.modal-header {
+  font-size: 28px;
+  color: #fff;
+  text-align: left;
+  font-weight: 700;
+  padding-bottom: 10px;
+  border-bottom: 2px solid rgba(255,255,255,0.25);
+  margin-bottom: 20px;
+}
 
 /* 彈窗內容 */
-.modal-content { font-size: 18px; color: #fff; line-height: 1.6; text-align: left; margin-bottom: 20px; }
+.modal-content {
+  font-size: 18px;
+  color: #fff;
+  line-height: 1.6;
+  text-align: left;
+  margin-bottom: 20px;
+}
 
-/* 聯絡表單 — Dimension 官網排版 */
-.contact-form { display: flex; flex-direction: column; gap: 15px; width: 100%; }
-.contact-form .form-row { display: flex; gap: 15px; }
-.contact-form input, .contact-form textarea {
+/* 聯絡表單 */
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 100%;
+}
+.contact-form .form-row {
+  display: flex;
+  gap: 15px;
+}
+.contact-form input,
+.contact-form textarea {
   padding: 10px;
   border-radius: 6px;
   border: 2px solid #fff;
@@ -119,21 +214,36 @@ nav ul.t-nav li a:hover { text-shadow: 0 0 5px rgba(255,255,255,0.7); }
   display: flex;
   gap: 15px;
   justify-content: flex-start;
-  width: 60%; /* 與 T 字導覽對齊 */
+  width: 100%;
 }
 .contact-form .button-group button {
   flex: 1;
-  padding: 12px 0;
   border-radius: 6px;
   font-weight: 700;
   border: 2px solid #fff;
   cursor: pointer;
+  padding: 12px 0;
 }
-.contact-form #submitBtn { background: rgba(255,255,240,0.85); color: #222; } /* 米白半透明 + 深灰文字 */
-.contact-form #resetBtn { background: #222; color: #fff; } /* 黑底白字 */
+.contact-form #submitBtn {
+  background: rgba(255,255,240,0.85);
+  color: #222;
+}
+.contact-form #resetBtn {
+  background: #222;
+  color: #fff;
+}
 
 /* 關閉按鈕 */
-.close-btn { margin-top: 20px; padding: 10px 25px; font-size: 16px; border-radius: 10px; border: 2px solid rgba(255,255,255,0.5); background: rgba(255,255,255,0.15); color: #fff; cursor: pointer; }
+.close-btn {
+  margin-top: 20px;
+  padding: 10px 25px;
+  font-size: 16px;
+  border-radius: 10px;
+  border: 2px solid rgba(255,255,255,0.5);
+  background: rgba(255,255,255,0.15);
+  color: #fff;
+  cursor: pointer;
+}
 .close-btn:hover { background: rgba(255,255,255,0.3); }
 
 /* 背景霧化遮罩 */
@@ -172,7 +282,8 @@ nav ul.t-nav li a:hover { text-shadow: 0 0 5px rgba(255,255,255,0.7); }
     </div>
   </div>
 
-  <nav>
+  <!-- T 型導覽列 -->
+  <nav id="topNav">
     <ul class="t-nav">
       <li><a href="#" onclick="openModal('intro')">關於佳咊</a></li>
       <li><a href="#" onclick="openModal('work')">服務內容</a></li>
@@ -180,10 +291,22 @@ nav ul.t-nav li a:hover { text-shadow: 0 0 5px rgba(255,255,255,0.7); }
       <li><a href="#" onclick="openModal('contact')">聯絡我們</a></li>
     </ul>
   </nav>
+
+  <!-- 下排四欄功能列 -->
+  <div class="align-container">
+    <div class="bottom-buttons">
+      <button>功能一</button>
+      <button>功能二</button>
+      <button>功能三</button>
+      <button class="reset">功能四</button>
+    </div>
+  </div>
 </header>
 
+<!-- 背景遮罩 -->
 <div id="overlay"></div>
 
+<!-- 玻璃彈窗 -->
 <div class="modal" id="modalBox">
   <div class="modal-header" id="modalTitle">標題</div>
   <div class="modal-content" id="modalContent">內容文字</div>
@@ -203,7 +326,7 @@ function openModal(key){
   const modal = document.getElementById('modalBox');
   const overlay = document.getElementById('overlay');
   const formContainer = document.getElementById('contactFormContainer');
-  const nav = document.querySelector('nav');
+  const nav = document.getElementById('topNav');
 
   document.getElementById('modalTitle').innerHTML = modalData[key].title;
   document.getElementById('modalContent').innerHTML = modalData[key].content;
@@ -224,7 +347,7 @@ function openModal(key){
     `;
   } else { formContainer.innerHTML = ''; }
 
-  if(nav) nav.style.visibility = 'hidden'; // 彈窗開啟隱藏 T 字
+  if(nav) nav.style.visibility = 'hidden';
   overlay.style.display = 'block';
   modal.style.display = 'block';
   requestAnimationFrame(()=>{ overlay.classList.add('show'); modal.classList.add('show'); });
@@ -234,7 +357,7 @@ function closeModal(){
   const modal = document.getElementById('modalBox');
   const overlay = document.getElementById('overlay');
   const formContainer = document.getElementById('contactFormContainer');
-  const nav = document.querySelector('nav');
+  const nav = document.getElementById('topNav');
 
   modal.classList.remove('show');
   overlay.classList.remove('show');
@@ -243,11 +366,12 @@ function closeModal(){
     modal.style.display = 'none';
     overlay.style.display = 'none';
     formContainer.innerHTML = '';
-    if(nav) nav.style.visibility = 'visible'; // 彈窗關閉恢復 T 字
+    if(nav) nav.style.visibility = 'visible';
   }, 300);
 }
 
 document.getElementById('overlay').onclick = closeModal;
 </script>
+
 </body>
 </html>
