--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@ nav ul.t-nav li a:hover {
   cursor: pointer;
 }
 .contact-form button#submitBtn {
-  background: #fff;
-  color: #000 !important;
+  background-color: rgba(255, 255, 255, 0.85); /* 半透明白色 */
+  color: #111; /* 接近黑色，但不死黑 */
 }
 .contact-form button#resetBtn {
   background: #000;
