--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ nav ul.t-nav li a:hover {
   border-radius: 10px;
   border: 2px solid rgba(255,255,255,0.5);
   background: rgba(255,255,255,0.15);
-  color: #fff;
+  color: #000;
   cursor: pointer;
 }
 .close-btn:hover {
