--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ nav ul.t-nav li a:hover {
 }
 .contact-form button#submitBtn {
   background-color: rgba(255, 255, 255, 0.85);
-  color: #111;
+  color: #000;
 }
 .contact-form button#resetBtn {
   background: #000;
@@ -212,7 +212,7 @@ nav ul.t-nav li a:hover {
   border-radius: 10px;
   border: 2px solid rgba(255,255,255,0.5);
   background: rgba(255,255,255,0.15);
-  color: #000;
+  color: #fff;
   cursor: pointer;
 }
 .close-btn:hover {
