--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ nav ul.t-nav li a:hover {
 }
 .contact-form button#submitBtn {
   background-color: rgba(255, 255, 255, 0.85);
-  color: #000;
+  color: #000; !important; 
 }
 .contact-form button#resetBtn {
   background: #000;
